--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css": "^3.0.0",
     "dotenv": "^17.2.0",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.13",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
